--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,124 +1,159 @@
 body {
-	position: relative;
-	margin: 0;
 	background-color: transparent;
 	background-image: url("../images/cheap_diagonal_fabric.png");
-	padding: 0;
+	margin: 0;
 	min-height: 100vh;
+	padding: 0;
 }
 footer {
-	position: absolute;
+	background-color: #666666;
+	border-top: 8px solid #4aaaa5;
 	bottom: 0;
-	float: left;
-    background-color: #666666;
-    border-top: 8px solid #4aaaa5;
-	width: 100%;
-	height: 70px;
-	text-align: center;
 	color: #ffffff;
+	float: left;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 12px;
+	height: 70px;
+	position: absolute;
+	text-align: center;
+    width: 100%;
 }
 h1 {
-	border: 5px;
 	background-color: #4aaaa5;
-	padding: 5px;
-	width: 200px;
+	border: 5px;
 	color: #ffffff;
 	font-family: 'Georgia', Times, 'Times New Roman',serif;
+	padding: 5px;
+    width: 200px;
 }
 a {
-	float: right;
-	align-content: center;
-	padding: 8px;
-	text-decoration: none;
 	color: #777777;
+	float: right;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	padding: 8px;
+    text-decoration: none;
+    align-content: center;
 }
 img {
 	float: left;
+	height: 210px;
 	margin: 10px;
 	margin-left: 20px;
 	width: 160px;
-	height: 210px;
 }
 ul {
 	font-size: 14px;
+	text-align: center;
 }
+
+li {
+	border-right: 1px solid #ccc;
+	list-style-type: none;
+	text-align: center;
+    width: 10%;
+    display: inline-block;
+}
+
 hr {
-	position: center;
-	border: none;
 	background-color: #ccc;
-	width: 920px;
+	border: none;
 	height: 2px;
+	position: center;
+	width: 920px;
 }
+
 input {
-	width: 910px;
 	height: 20px;
-}
-textarea {
-	margin-bottom: 10px;
-	border-color: #ccc;
 	width: 910px;
-	height: 200px;
 }
+
+textarea {
+	border-color: #ccc;
+	height: 200px;
+	margin-bottom: 10px;
+	width: 910px;
+}
+
 fieldset {
+	border: none;
 	margin: 10px;
 	margin-bottom: 20px;
-	border: none;
 }
+
 .title {
-	margin-left: 10px;
 	background-color: #ffffff;
-	padding: 15px;
-	padding-top: 20px;
-	padding-bottom: 10px;
 	color: #4aaaa5;
+	margin-left: 10px;
+	padding: 15px;
+	padding-bottom: 10px;
+	padding-top: 20px;
 }
+
 .portfolioImage {
-	padding: 10px;
-	width: 220px;
 	height: 230px;
+	padding: 10px;
+    width: 220px;
+    position: relative;
 }
+
 .content {
 	align-content: center;
+	background-color: #ffffff;
+	border: 1px, solid, #666666;
+	color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	margin: auto;
 	margin-top: 0;
-	border: 1px, solid, #666666;
-	background-color: #ffffff;
 	padding-top: 0;
 	width: 960px;
-	color: #777777;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+
 #header {
-	border-top: 20px;
 	background-color: #ffffff;
-	padding-left: 25vh;
-	text-align: center;
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+    border-top: 20px;
+    padding-left: 25vh;
 }
+
 #images {
-	overflow: hidden;
+    overflow: hidden;
+    z-index: 2;
 }
-#links {
-	float: right;
-	border-right: 2px solid #ccc;
-	width: 30%;
-	list-style-type: none;
-}
+
 #submit {
-	margin-bottom: 6px;
 	background-color: #4aaaa5;
-	width: 100px;
-	height: 40px;
 	color: #ffffff;
 	font-size: 15px;
+	height: 40px;
+	margin-bottom: 6px;
+	width: 100px;
 }
+
 #bioText {
+	letter-spacing: 2;
+	line-height: 2;
 	margin-left: 15px;
 	padding: 10px;
-	line-height: 2;
-	letter-spacing: 2;
+}
+
+#links {
+    float: right;
+    border-right: 2px solid #ccc;
+    width: 30%;
+    list-style-type: none;
+}
+
+#imageText, #countdown, #snake, #bucketlist, #succulents{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    height: 30px;
+    padding: 10px;
+    width: 220px;
+    position: relative;
+    text-align: center;
+    float: left;
+    z-index: 1;
 }
