--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,159 +1,117 @@
+
+.btn {
+	background-color: #A9876F;
+	font-family: Arial, Helvetica, sans-serif;
+	height: 5%;
+    width: 10%;
+}
+.container {
+    background-color: #fff;
+}
+.navbar {
+	background-color: #A9876F;
+	border-bottom: 8px solid #6C5748;
+	color: #fff;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 90%;
+    padding-left: 7%;
+    padding-top: 2%;
+	text-align: center;
+	width: 100%;
+}
+
+.navbar-toggler-icon {
+	background-image: url(" https://mdbootstrap.com/img/svg/hamburger2.svg?color=fff");
+}
+.nav-link {
+    color: #FED6B4;
+    font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 100%;
+}
+.socialMedia {
+	color: #A9876F;
+	text-decoration: underline;
+}
+
+.img-responsive {
+	height: 60%;
+    width: 30%;
+}
+
+.selected {
+	color: #fff;
+}
+
+#name {
+    font-size: 190%;
+    margin-right: 60%;
+    font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+}
+#projectLinks {
+    color: #fff;
+    text-decoration: underline;
+}
+a:hover {
+	color: #fff;
+}
 body {
 	background-color: transparent;
-	background-image: url("../images/cheap_diagonal_fabric.png");
-	margin: 0;
-	min-height: 100vh;
-	padding: 0;
+	background-image: url("../images/leather_1.png");
 }
 footer {
-	background-color: #666666;
-	border-top: 8px solid #4aaaa5;
-	bottom: 0;
-	color: #ffffff;
-	float: left;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	background-color: #A9876F;
+    border-top: 8px solid #6C5748;
+	color: #fff;
+    font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 12px;
-	height: 70px;
-	position: absolute;
+    height: 3rem;
 	text-align: center;
     width: 100%;
+    position: absolute;
+    bottom: 0;
 }
-h1 {
-	background-color: #4aaaa5;
-	border: 5px;
-	color: #ffffff;
-	font-family: 'Georgia', Times, 'Times New Roman',serif;
-	padding: 5px;
-    width: 200px;
-}
-a {
-	color: #777777;
-	float: right;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	padding: 8px;
-    text-decoration: none;
-    align-content: center;
+p {
+    font-family: 'Barlow', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 18px;
 }
 img {
 	float: left;
-	height: 210px;
-	margin: 10px;
-	margin-left: 20px;
-	width: 160px;
+	height: 27vh;
+	margin-right: 10px;
+	width: 20vh;
 }
 ul {
-	font-size: 14px;
-	text-align: center;
+	padding-right: 8vh;
 }
-
-li {
-	border-right: 1px solid #ccc;
-	list-style-type: none;
-	text-align: center;
-    width: 10%;
-    display: inline-block;
+h2 {
+	background-color: #fff;
+	color: #6C5748;
+	font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
-
-hr {
-	background-color: #ccc;
-	border: none;
-	height: 2px;
-	position: center;
-	width: 920px;
+h4 {
+	color: black;
+	font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 15px;
+	width: 200px;
 }
-
-input {
-	height: 20px;
-	width: 910px;
-}
-
 textarea {
 	border-color: #ccc;
 	height: 200px;
 	margin-bottom: 10px;
 	width: 910px;
 }
-
+hr {
+	background-color: #A9876F;
+	height: 1px;
+	position: center;
+	width: 100%;
+}
+input {
+	height: 20px;
+	width: 910px;
+}
 fieldset {
 	border: none;
 	margin: 10px;
 	margin-bottom: 20px;
-}
-
-.title {
-	background-color: #ffffff;
-	color: #4aaaa5;
-	margin-left: 10px;
-	padding: 15px;
-	padding-bottom: 10px;
-	padding-top: 20px;
-}
-
-.portfolioImage {
-	height: 230px;
-	padding: 10px;
-    width: 220px;
-    position: relative;
-}
-
-.content {
-	align-content: center;
-	background-color: #ffffff;
-	border: 1px, solid, #666666;
-	color: #777777;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	margin: auto;
-	margin-top: 0;
-	padding-top: 0;
-	width: 960px;
-}
-
-#header {
-	background-color: #ffffff;
-	color: #777777;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    text-align: center;
-    width: 100%;
-    border-top: 20px;
-    padding-left: 25vh;
-}
-
-#images {
-    overflow: hidden;
-    z-index: 2;
-}
-
-#submit {
-	background-color: #4aaaa5;
-	color: #ffffff;
-	font-size: 15px;
-	height: 40px;
-	margin-bottom: 6px;
-	width: 100px;
-}
-
-#bioText {
-	letter-spacing: 2;
-	line-height: 2;
-	margin-left: 15px;
-	padding: 10px;
-}
-
-#links {
-    float: right;
-    border-right: 2px solid #ccc;
-    width: 30%;
-    list-style-type: none;
-}
-
-#imageText, #countdown, #snake, #bucketlist, #succulents{
-    background-color: #4aaaa5;
-    color: #ffffff;
-    height: 30px;
-    padding: 10px;
-    width: 220px;
-    position: relative;
-    text-align: center;
-    float: left;
-    z-index: 1;
 }
